--- a/style.css
+++ b/style.css
@@ -1,1 +1,80 @@
-/*# sourceMappingURL=style.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style-type: none;
+  text-decoration: none;
+  font-family: "Raleway", sans-serif;
+}
+
+header {
+  background-color: #fef5f1;
+}
+
+.header-toggle {
+  display: none;
+}
+
+.toggle-bar {
+  display: none;
+}
+
+.navbar-cont {
+  display: flex;
+  justify-content: space-between;
+  margin: auto auto;
+  width: 85%;
+  padding: 10px;
+  margin-top: auto;
+  margin-bottom: auto;
+  align-items: center;
+  padding: 10px 0;
+}
+
+.sign-up-btn {
+  border: 2px solid #101030;
+  background-color: #190E2C;
+  padding: 10px;
+  border-radius: 6px;
+}
+.sign-up-btn:hover {
+  background-color: #fef5f1;
+}
+
+.sign-up-btn a {
+  color: white;
+}
+.sign-up-btn a:hover {
+  color: #190E2C;
+}
+
+.header-right > ul {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  margin-top: auto;
+  margin-bottom: auto;
+  align-items: center;
+}
+
+@media screen and (max-width: 800px) {
+  .header-right {
+    display: none;
+  }
+
+  .toggle-bar {
+    display: inline-block;
+    width: 30px;
+  }
+
+  .header-left img {
+    width: 8.5rem;
+  }
+
+  .header-bar {
+    display: flex;
+    flex: auto;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}/*# sourceMappingURL=style.css.map */
