--- a/header/_header.scss
+++ b/header/_header.scss
@@ -25,33 +25,60 @@ header {
     padding: 10px 0;
 
 }
-
-.sign-up-btn {
-    border: 2px solid #101030;
+.link-a{
+ color: black;
+ &:hover{
+     background: rgba(0.5, 0.5, 0.5, 0.5);
+     padding: 8px;
+     border-radius: 7px;
+     transition: all ease-out 0.4s;
+ }
+}
+.sign-btn{
+    color: white;
     background-color: #190E2C;
     padding: 10px;
-    border-radius: 6px;
-    
+    border-radius: 6px ;
     &:hover{
-        
-        background-color: #fef5f1;
+        color: black;
+        background-color:white ;
+        border: 2px solid #101030;
+        transition: all 0.5s ease-in;
     }
 }
-
-.sign-up-btn a {
-    color: white;
-
-    &:hover{
-        color: #190E2C;
-    }
-}
-
 .header-right>ul {
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    gap: 30px;
     margin-top: auto;
     margin-bottom: auto;
     align-items: center;
 
+}
+.drop-down{
+    position: relative;
+    display: inline-block;
+}
+.dropdown-cont{
+    background-color: white;
+    border: 1px solid white;
+    border-radius: 7px;
+    padding: 10px;
+    position: absolute;
+    display: none;
+margin-bottom: 10px;
+    
+}
+
+.drop-down:hover  .dropdown-cont{
+    display: block;
+}
+.drop-img{
+
+    &:hover{
+        background: rgba(0.5, 0.5, 0.5, 0.5);
+        padding: 10px;
+        border-radius: 7px;
+        transition: all ease-out 0.4s;
+    }
 }
