--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
 header {
   background-color: #fef5f1;
+  padding: 0.8rem;
 }
 
 .header-toggle {
@@ -33,11 +34,11 @@ header {
 
 .link-a {
   color: black;
+  transition: all ease-in 0.4s;
 }
 .link-a:hover {
-  background: rgba(1, 1, 1, 0.5);
-  padding: 8px;
-  border-radius: 7px;
+  border-bottom: 3px solid #190E2C;
+  border-radius: 2px;
   transition: all ease-out 0.4s;
 }
 
@@ -76,13 +77,21 @@ header {
   position: absolute;
   display: none;
   margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .drop-down:hover .dropdown-cont {
   display: block;
 }
 
-.drop-img:hover {
+.drop-content {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 10px;
+}
+
+.drop-content li:hover {
   background: rgba(1, 1, 1, 0.5);
   padding: 10px;
   border-radius: 7px;
@@ -97,6 +106,11 @@ header {
   .toggle-bar {
     display: inline-block;
     width: 30px;
+    align-items: center;
+    cursor: pointer;
+  }
+  .toggle-bar:hover {
+    opacity: 0.7;
   }
 
   .header-left img {
@@ -108,5 +122,6 @@ header {
     flex: auto;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
   }
 }/*# sourceMappingURL=style.css.map */
