--- a/style.css
+++ b/style.css
@@ -1,35 +1,257 @@
+.btnContainer {
+  padding-top: 4vh;
+}
+.btnContainer button {
+  padding: 0.8rem 1.5rem;
+  background-color: hsl(262deg, 52%, 11%);
+  border: none;
+  border-radius: 5px;
+  color: white;
+}
+
+.btnContainer2 {
+  padding-top: 5vh;
+  width: 90%;
+  margin: 0 auto;
+  text-align: center;
+  padding-left: 1rem;
+}
+.btnContainer2 .getStartedBtn {
+  padding: 0.8rem 1.5rem;
+  background-color: hsl(262deg, 52%, 11%);
+  border: none;
+  border-radius: 5px;
+  transition: 0.7s ease;
+  color: white;
+}
+.btnContainer2 .getStartedBtn:hover {
+  background-color: transparent;
+  color: hsl(262deg, 52%, 11%);
+  border: 1.4px solid hsl(262deg, 52%, 11%);
+}
+.btnContainer2 .learnMoreBtn {
+  background-color: transparent;
+  padding: 0.8rem 1.5rem;
+  border: 1.4px solid hsl(262deg, 52%, 11%);
+  border-radius: 5px;
+  transition: 0.7s ease;
+  margin-top: 0.7rem;
+}
+.btnContainer2 .learnMoreBtn:hover {
+  background-color: hsl(262deg, 52%, 11%);
+  color: white;
+}
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   list-style-type: none;
+  font-size: 16px;
   font-family: "Raleway", sans-serif;
+}
+
+h1 {
+  text-align: center;
+  font-size: 2.7rem;
+  font-weight: 700;
+  margin-top: 5rem;
+}
+
+h2 {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 700;
+  margin-top: 5rem !important;
+  width: 90%;
+  margin: 0 auto;
+}
+
+h5 {
+  font-size: 1.5rem;
+  text-align: center;
+  padding-bottom: 2rem;
+}
+
+.anywhere {
+  color: hsl(21deg, 80%, 36%);
+  font-size: 2.7rem;
+  font-weight: 700;
+}
+
+p {
+  text-align: center;
+  color: black;
+  line-height: 1.5;
+  padding-top: 1rem;
+  width: 90%;
+  margin: 0 auto;
 }
 
 @media (min-width: 768px) {
   header .ul_signup {
     display: flex !important;
+    -moz-column-gap: 1rem;
+         column-gap: 1rem;
+    align-items: center;
   }
   header .ul_signup ul {
     display: flex;
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
+  }
+  header .ul_signup ul li a {
+    color: hsl(262deg, 52%, 11%);
+    font-size: 0.9rem;
+    text-decoration: none;
+    font-weight: 500;
   }
   header .bars {
     display: none;
+  }
+  header .bars i {
+    color: hsl(262deg, 52%, 11%);
   }
 }
 header {
   background-color: hsl(21deg, 81%, 96%);
   padding: 1rem;
+  position: fixed;
+  z-index: 100;
+  width: 100%;
 }
 header nav {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 90%;
   margin: 0 auto;
 }
 header nav .imgContainer img {
-  width: 70%;
+  width: 100%;
 }
 header nav .ul_signup {
   display: none;
+}
+
+.section1 {
+  padding-top: 5rem;
+}
+.section1 .introhome_introtext {
+  display: flex;
+  flex-direction: column;
+}
+.section1 .introhome_introtext .introhome_container {
+  width: 90%;
+  margin: 0 auto;
+}
+.section1 .introhome_introtext .introhome_container img {
+  width: 100%;
+}
+.section1 .introhome_introtext .introtext {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.section2 {
+  background-color: hsl(21deg, 81%, 96%);
+  margin-top: 5rem;
+  padding-bottom: 5rem;
+}
+.section2 .img_introhome2 {
+  padding-top: 3rem;
+  display: flex;
+  flex-direction: column;
+}
+.section2 .img_introhome2 .empty_introhome2 {
+  text-align: center;
+  position: relative;
+  width: 100%;
+}
+.section2 .img_introhome2 .empty_introhome2 .introhome2 {
+  background-color: hsl(262deg, 52%, 11%);
+  padding: 0.5rem 0.3rem;
+  width: 82%;
+  margin: 0 auto;
+}
+.section2 .img_introhome2 .empty_introhome2 .introhome2 img {
+  width: 100%;
+}
+
+.section3 {
+  background-color: hsl(0deg, 0%, 95%);
+  padding-top: 4rem;
+}
+.section3 .cardParent {
+  display: grid;
+  row-gap: 2rem;
+}
+.section3 .cardParent .card {
+  background-color: white;
+  width: 90%;
+  margin: 0 auto;
+  border-radius: 9px 9px 9px 9px;
+  padding-bottom: 2rem;
+}
+.section3 .cardParent .card .homePicture {
+  text-align: center;
+}
+.section3 .cardParent .card .homePicture img {
+  width: 104%;
+  transform: translateX(-2%);
+}
+.section3 .cardParent .card .houseName_location_amenities {
+  width: 80%;
+  margin: 0 auto;
+  padding-top: 1rem;
+}
+.section3 .cardParent .card .houseName_location_amenities .houseName {
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: black;
+}
+.section3 .cardParent .card .houseName_location_amenities .location {
+  color: hsl(36deg, 100%, 55%);
+  font-size: medium;
+  font-weight: 500;
+  width: 90%;
+}
+.section3 .cardParent .card .houseName_location_amenities .amenities {
+  display: grid;
+  grid-template-columns: auto auto;
+  place-items: center;
+  -moz-column-gap: 0.4rem;
+       column-gap: 0.4rem;
+  row-gap: 0.6rem;
+}
+.section3 .cardParent .card .houseName_location_amenities .amenities div {
+  background-color: hsl(262deg, 52%, 11%);
+  padding: 0.8rem;
+  margin-top: 0.5rem;
+  border-radius: 8px;
+  width: 100%;
+  color: white;
+  text-align: center;
+}
+.section3 .cardParent .card .houseName_location_amenities .amenities div .mainAmenity {
+  padding-left: 0.4rem;
+}
+.section3 .cardParent .card .houseName_location_amenities ul {
+  text-align: center;
+  padding-top: 1.2rem;
+}
+.section3 .cardParent .card .houseName_location_amenities ul .rate {
+  color: hsl(262deg, 52%, 11%);
+  font-size: 1.3rem;
+  font-weight: 600;
+  padding-bottom: 1rem;
+}
+.section3 .cardParent .card .houseName_location_amenities ul li a button {
+  background-color: hsl(36deg, 96%, 37%);
+  color: white;
+  border: none;
+  font-size: 0.7rem;
+  font-weight: 600;
+  padding: 0.7rem 1rem;
+  border-radius: 3px;
 }/*# sourceMappingURL=style.css.map */
