--- a/style/base/_button.scss
+++ b/style/base/_button.scss
@@ -1,11 +1,18 @@
 .btnContainer{
     padding-top: 4vh;
     button{
+        cursor: pointer;
         padding: 0.8rem 1.5rem;
         background-color: $btn1;
         border: none;
         border-radius: 5px;
         color: white;
+        transition: .4s ease;
+        &:hover{
+            background-color: transparent;
+            color: $btn1;
+            border: 1.4px solid $btn1;
+        } 
     }
 }
 .btnContainer2{
@@ -15,6 +22,7 @@
     text-align: center;
     padding-left: 1rem;
     .getStartedBtn{
+        cursor: pointer;
         padding: 0.8rem 1.5rem;
         background-color: $btn1;
         border: none;
@@ -28,6 +36,7 @@
         }
     }
     .learnMoreBtn{
+        cursor: pointer;
         background-color: transparent;
         padding: 0.8rem 1.5rem;
         border: 1.4px solid $btn1;
