--- a/style/layouts/_section.scss
+++ b/style/layouts/_section.scss
@@ -58,6 +58,7 @@
 .section3{
     background-color: $section3Bg;
     padding-top: 4rem;
+    padding-bottom: 4rem;
     .cardParent{
         display: grid;
         row-gap: 2rem;
@@ -131,9 +132,35 @@
                                 font-weight: 600;
                                 padding: .7rem 1rem;
                                 border-radius: 3px;
+                                transition: .4s ease;
+                                cursor: pointer;
+                                &:hover{
+                                    background-color: transparent;
+                                    border: 1px solid $btn2;
+                                    color: $btn2;
+                                }
                             }
                         }
                     }
+                }
+            }
+        }
+        a{
+            text-align: center;
+            button{
+                cursor: pointer;
+                background-color: $btn2;
+                color: white;
+                border: none;
+                font-size: 1rem;
+                font-weight: 600;
+                padding: 1.5rem 2.5rem;
+                border-radius: 3px;
+                transition: .4s ease;
+                &:hover{
+                    background-color: transparent;
+                    border: 1px solid $btn2;
+                    color: $btn2;
                 }
             }
         }
@@ -141,6 +168,56 @@
 }
 
 
+.section4{
+    padding-top: 3rem;
+    p{
+        padding-top: 0rem !important;
+    }
+    .parentCity{
+        .image_container{
+            position: relative;
+            &:hover .city_name_view_container{
+                opacity: 1;
+                margin-left: 0px;
+            }
+            .city_img{
+                text-align: center;
+                width: 90%;
+                margin: 0 auto;
+                cursor: pointer;
+                img{
+                    width: 100%;
+                    border-radius: 3px;
+                }
+            }
+            .city_name_view_container{
+                border-radius: 5px;
+                position: absolute;
+                top: 0%;
+                left: 5%;
+                bottom: 0%;
+                right: 5%;
+                height: 97.7%;
+                opacity: 0;
+                margin-left: 1000px;
+                background-color: $bgHover;
+                transition: 0.5s ease-in-out;
+                .city_name_view{
+                    width: 20%;
+                    color: white;
+                    font-size: 20px;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    -webkit-transform: translate(-50%, -50%);
+                    -ms-transform: translate(-50%, -50%);
+                    transform: translate(-50%, -50%);
+                    text-align: center;
+                }
+            }
+        }
+    }
+}
 
 
 
