--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ header {
 .header-right > ul {
   display: flex;
   flex-direction: row;
-  gap: 30px;
+  gap: 70px;
   margin-top: auto;
   margin-bottom: auto;
   align-items: center;
@@ -98,6 +98,21 @@ header {
   transition: all ease-out 0.4s;
 }
 
+@media screen and (max-width: 1300px) {
+  .image-1 {
+    width: 100% !important;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .header-right > ul {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    margin-top: auto;
+    margin-bottom: auto;
+    align-items: center;
+  }
+}
 @media screen and (max-width: 800px) {
   .header-right {
     display: none;
@@ -124,4 +139,211 @@ header {
     justify-content: space-between;
     align-items: center;
   }
+
+  .section-bolt {
+    display: flex !important;
+    flex-direction: column !important;
+    margin: 0 auto !important;
+  }
+
+  .btns {
+    text-align: center !important;
+  }
+
+  .text-text {
+    font-weight: 700;
+    font-size: 33px !important;
+    line-height: 54px;
+    width: 90% !important;
+  }
+
+  .part {
+    display: flex !important;
+    justify-content: center;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
+  .color-text {
+    display: inline-block;
+    color: hsl(21deg, 80%, 36%);
+  }
+
+  .para-text {
+    width: 90% !important;
+  }
+
+  .image-1 {
+    width: 100% !important;
+  }
+}
+@media screen and (max-width: 420px) {
+  .text-text {
+    font-weight: 700;
+    font-size: 25px !important;
+    line-height: 54px;
+    width: 90% !important;
+  }
+
+  .para-text {
+    font: 15px !important;
+  }
+}
+.text-text {
+  font-weight: 700;
+  font-size: 37px;
+  line-height: 54px;
+  width: 500px;
+}
+
+.color-text {
+  display: inline-block;
+  color: hsl(21deg, 80%, 36%);
+}
+
+.para-text {
+  width: 495px;
+}
+
+.btns .btn1 {
+  background-color: #190E2C;
+  border-radius: 4px;
+  color: #fff;
+  padding: 12px;
+  width: 8rem;
+  font-weight: 500;
+  cursor: pointer;
+}
+.btns .btn1:hover {
+  background-color: #EEEEF2;
+  border-radius: 4px;
+  color: #000;
+  padding: 12px;
+  width: 8rem;
+  font-weight: 500;
+  transition: all 0.6s ease;
+}
+.btns .btn2 {
+  background-color: #EEEEF2;
+  border-radius: 4px;
+  color: #000;
+  padding: 12px;
+  width: 8rem;
+  font-weight: 500;
+  cursor: pointer;
+}
+.btns .btn2:hover {
+  background-color: #190E2C;
+  border-radius: 4px;
+  color: #fff;
+  padding: 12px;
+  width: 8rem;
+  font-weight: 500;
+  transition: all 0.6s ease;
+}
+
+.part1 {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.section-bolt {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 85%;
+}
+
+.section-1 {
+  margin: 0 auto;
+  background-color: #EEEEF2;
+}
+
+.apartment {
+  display: block;
+}
+
+.back-ground-top {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  margin: auto 0;
+}
+
+.main-stream {
+  display: flex;
+  flex-direction: row;
+  gap: 80px;
+}
+
+.width-class {
+  margin: 0 auto;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  background-color: #A10041;
+  padding-bottom: 40px;
+  padding-left: 10px;
+  padding-right: 10px;
+  color: #fff;
+}
+
+.parse {
+  margin-right: auto;
+  background-color: #fff;
+  margin-left: -10px;
+  padding: 10px;
+  border-radius: 0 0 10px 0;
+}
+
+.width-class2 {
+  margin: 0 auto;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  background-color: #3B2F4C;
+  padding-bottom: 40px;
+  padding-left: 10px;
+  padding-right: 10px;
+  color: #fff;
+}
+
+.width-class3 {
+  margin: 0 auto;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  background-color: #031CFF;
+  padding-bottom: 40px;
+  padding-left: 10px;
+  padding-right: 10px;
+  color: #fff;
+}
+
+.back-ground {
+  display: grid;
+  grid-template-columns: repeat 1, 400px;
+  max-width: 1200px;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+h3 {
+  text-align: center;
+  padding-bottom: 9rem;
+}
+
+.images-reps {
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+  justify-content: space-evenly;
+  width: 100%;
+  gap: 47px;
 }/*# sourceMappingURL=style.css.map */
