--- a/header/_header.scss
+++ b/header/_header.scss
@@ -12,7 +12,9 @@ header {
 .toggle-bar {
     display: none;
 }
+// .drop-img:hover #11{
 
+// }
 .navbar-cont {
     display: flex;
     justify-content: space-between;
