--- a/style.css
+++ b/style.css
@@ -336,7 +336,7 @@ header {
 
 h3 {
   text-align: center;
-  padding-bottom: 9rem;
+  padding-bottom: 5rem;
 }
 
 .images-reps {
@@ -346,4 +346,111 @@ h3 {
   justify-content: space-evenly;
   width: 100%;
   gap: 47px;
+}
+.images-reps .image-rep1 {
+  cursor: pointer;
+}
+.images-reps .image-rep1:hover {
+  transform: scaleX(1.2);
+  opacity: 0.7;
+  -webkit-animation: forwards;
+          animation: forwards;
+  transition: all 0.5s;
+}
+.images-reps .image-rep2 {
+  cursor: pointer;
+}
+.images-reps .image-rep2:hover {
+  transform: scaleX(1.2);
+  opacity: 0.7;
+  transition: all 0.5s;
+}
+.images-reps .image-rep3 {
+  cursor: pointer;
+}
+.images-reps .image-rep3:hover {
+  transform: scaleX(1.2);
+  opacity: 0.7;
+  transition: all 0.5s;
+}
+
+.section-3 {
+  background-color: #F2F2F2;
+}
+
+.img-adam {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin: 0 auto;
+  width: 70%;
+}
+
+.adam > .adam-img {
+  width: 24.5rem;
+}
+
+.footer-sect {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 86%;
+}
+
+.line1-ul {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.line2-ul {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.line3-ul {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.line4 {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.link-b {
+  color: #000;
+}
+.link-b:hover {
+  border-bottom: 2px solid rgb(1, 1, 1);
+}
+
+.sub {
+  text-align: right;
+}
+
+.img-src {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.link-s {
+  text-decoration: none;
+}
+
+footer {
+  padding-top: 15px;
+  padding-bottom: 6rem;
+}
+
+.jpeg:hover {
+  opacity: 0.6;
+  cursor: pointer;
+  transform: scaleX(1.1);
+  transition: all 0.5s ease;
 }/*# sourceMappingURL=style.css.map */
