--- a/style.css
+++ b/style.css
@@ -187,6 +187,16 @@ header nav .imgContainer img {
 header nav .ul_signup {
   display: none;
 }
+header .progress-container {
+  width: 100%;
+  height: 8px;
+  background: #ccc;
+}
+header .progress-container .progress-bar {
+  height: 8px;
+  background: hsl(262deg, 52%, 11%);
+  width: 0%;
+}
 
 .section1 {
   padding-top: 5rem;
