--- a/style/layouts/_header.scss
+++ b/style/layouts/_header.scss
@@ -19,4 +19,14 @@ header{
             display: none;
         }
     }
+    .progress-container {
+        width: 100%;
+        height: 8px;
+        background: #ccc;
+        .progress-bar {
+            height: 8px;
+            background: $btn1;
+            width: 0%;
+          }
+      }
 }
