--- a/style/layouts/_footer.scss
+++ b/style/layouts/_footer.scss
@@ -11,6 +11,7 @@ footer {
     max-width: 700px;
     margin-top: 2rem;
     padding-bottom: 1rem;
+    margin: auto;
     cursor: pointer;
     .question {
         display: flex;
