--- a/style/components/_media.scss
+++ b/style/components/_media.scss
@@ -2,39 +2,36 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (min-width: 768px) {
+@media (min-width: 930px) {
     header{
         .ul_signup{
             display: flex !important;
             column-gap: 1rem;
             align-items: center;
+            position: absolute !important;
+            right: -25.5vw !important;
+            top: 0% !important;
+            // width: 0% !important;
+            padding: 0 !important;
+            background: $headerBg !important;
             ul{
                 display: flex;
                 column-gap: 2rem;
                 li{
                     a{
-                        color: $btn1;
+                        color: $btn1 !important;
                         font-size: .9rem;
                         text-decoration: none;
                         font-weight: 500;
+                        &:hover{
+                            text-decoration: underline;
+                            text-underline-offset: 5px;
+                        }
                     }
                 }
             }
         }
-        .bars{
+        .menu{
             display: none;
             i{
                 color: $btn1;
