--- a/style/layouts/_section.scss
+++ b/style/layouts/_section.scss
@@ -4,7 +4,7 @@
         display: flex;
         flex-direction: column;
         .introhome_container{
-            width: 90%;
+            // width: 90%;
             margin: 0 auto;
             img{
                 width: 100%;
