--- a/media/_media.scss
+++ b/media/_media.scss
@@ -1,6 +1,6 @@
 @media screen and (max-width:1300px) {
-    .image-1{
-        width: 100% !important;
+    .image-1 {
+        width: 117% !important;
     }
 }
 
@@ -15,12 +15,22 @@
         align-items: center;
 
     }
-
+   
 }
 
+@media screen and (max-width:1264px) {
+ .img-adam{
+     display: grid !important;
+     grid-template-columns: auto auto !important;
+ }
+}
 @media screen and (max-width:800px) {
+   
     .header-right {
         display: none;
+    }
+    .header-toggle{
+        display: flex !important;
     }
 
     .toggle-bar {
@@ -36,6 +46,7 @@
 
 
     }
+    
 
     .header-left img {
         width: 8.5rem;
@@ -103,6 +114,39 @@
         width: 100% !important;
     }
 
+    .images-reps {
+        display: flex !important;
+        flex-direction: column !important;
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    .img-adam {
+        display: flex !important;
+        flex-direction: column !important;
+        margin: 0 auto;
+        text-align: center;
+        .adam-img{
+            width: 90% !important;
+        }
+    }
+    .footer-sect{
+        display: grid !important;
+          grid-template-columns:   auto auto;
+        grid-gap: 20px !important;
+        grid-row-gap:09px ;
+        max-width: 300px !important;
+        justify-content: center !important;
+        margin: 0 auto !important;
+        // text-align:  !important;
+        width: 80% !important;
+        margin-right:20rem ;
+    
+      .sub{
+          text-align: left;
+      }
+    }
+
 }
 
 @media screen and (max-width:420px) {
@@ -112,7 +156,8 @@
         line-height: 54px;
         width: 90% !important;
     }
-    .para-text{
+
+    .para-text {
         font: 15px !important;
     }
 }
