--- a/style/layouts/_section.scss
+++ b/style/layouts/_section.scss
@@ -1,10 +1,10 @@
 .section1{
-    padding-top: 5rem;
+    padding-top: 9rem;
     .introhome_introtext{
         display: flex;
         flex-direction: column;
         .introhome_container{
-            // width: 90%;
+            width: 90%;
             margin: 0 auto;
             img{
                 width: 100%;
