--- a/style/base/_typography.scss
+++ b/style/base/_typography.scss
@@ -2,7 +2,7 @@ h1{
     text-align: center;
     font-size: 2.7rem;
     font-weight: 700;
-    margin-top: 5rem;
+    // margin-top: 5rem;
 }
 h2{
     text-align: center;
