--- a/style/components/_media.scss
+++ b/style/components/_media.scss
@@ -2,18 +2,18 @@
 
 
 
-@media (min-width: 930px) {
+@media (min-width: 768px) {
     header{
         .ul_signup{
             display: flex !important;
             column-gap: 1rem;
             align-items: center;
             position: absolute !important;
-            right: -25.5vw !important;
-            top: 0% !important;
-            // width: 0% !important;
+            right: 0vw !important;
+            top: -65% !important;
+            // width: -1% !important;
             padding: 0 !important;
-            background: $headerBg !important;
+            background: hsla(21, 81%, 96%, 0)!important;
             ul{
                 display: flex;
                 column-gap: 2rem;
@@ -36,6 +36,57 @@
             i{
                 color: $btn1;
             }
+        }
+    }
+
+    .section1{
+        // padding-top: 6rem;
+        .introhome_introtext{
+            flex-direction: row !important;
+            align-items: center;
+            .introhome_container{
+                order: 2;
+            } 
+            .introtext{
+                h1, p{
+                    text-align: start;
+                    width: 80%;
+                    margin: 0 auto;
+                }
+            }
+        }
+    }
+
+    .section2{
+        .img_introhome2{
+            flex-direction: row !important;
+            align-items: center;
+            .h2_p_btnContainer2{
+                h2, p{
+                    text-align: start !important;
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 1440px) {
+    .btnContainer{
+        button{
+            transform: translateY(-10%) !important;
+        }
+    }
+}
+
+@media (min-width: 2560px) {
+    header{
+        .ul_signup{
+            top: -125% !important;
+        }
+    }
+    .btnContainer{
+        button{
+            transform: translateY(-30%) !important;
         }
     }
 }
