--- a/header/_header.scss
+++ b/header/_header.scss
@@ -8,6 +8,65 @@ header {
 .header-toggle {
     display: none;
 }
+.header-toggle{
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 80%;
+    max-width: 34rem;
+    height: 100%;
+    z-index: 10;
+    background-color: aliceblue;
+    overflow-y: scroll;
+    transform: translateX(100%);
+    transition: transform 0.5s cubic-bezier(0.5, 0 , 0 , 0.75);
+}
+.blur_overlay{
+    display: none;
+    position: fixed;
+    top: 0;
+    left:0;
+width: 100%;
+height: 100%;
+z-index: 9;
+background:rgba( 0, 0, 0, 0.5);
+backdrop-filter: blur(1rem);
+}
+.blur_overlay.is--active{
+    display: block;
+    transition: transform 0.5s;
+   
+}
+.header-toggle.is--active{
+    transform: translateX(0);
+}
+
+.header-toggleul{
+     width: 80%;
+     margin: 0 auto;
+ }
+
+.header-toggle ul li{
+     width: 100%;
+     padding: 1.2rem 0;
+     padding-left: 2rem;
+     margin-bottom: 0.5rem;
+     cursor: pointer;
+     border-radius: 1.2rem;
+    //  background-color: red;
+ }
+ .nav-link{
+     color:#393c41;
+     font-weight: 600;
+     font-size: 1.1rem;
+     text-transform: capitalize;text-decoration: none;
+     
+ }
+
+.header-toggle ul li:hover{
+     background-color: #0000000d;
+     transition: background-color  0.34s ease;
+ }
 
 .toggle-bar {
     display: none;
