--- a/style/base/_button.scss
+++ b/style/base/_button.scss
@@ -22,9 +22,7 @@
 .btnContainer2{
     padding-top: 5vh;
     width: 90%;
-    margin: 0 auto;
     text-align: center;
-    padding-left: 1rem;
     .getStartedBtn{
         cursor: pointer;
         padding: 0.8rem 1.5rem;
@@ -57,18 +55,20 @@
 @media (min-width: 768px) {
     .btnContainer2{
         display: flex;
-        justify-content: flex-start;
         align-items: baseline;
+        -moz-column-gap: 1rem;
         column-gap: 1rem;
+        width: 90%;
+        margin: 0 auto;
         // display: grid;
         // grid-template-columns: 1fr 1fr;
         // align-items: baseline;
-        .getStartedBtn{
-            width: 100%;
-        }
-        .learnMoreBtn{
-            width: 100%;
-        }
+        // .getStartedBtn{
+        //     width: 100%;
+        // }
+        // .learnMoreBtn{
+        //     width: 100%;
+        // }
     }
 }
 
